--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
 appdirs==1.4.4
+arrow==1.3.0
 async-timeout==4.0.2
 attrs==23.1.0
 certifi==2023.5.7
@@ -9,6 +10,7 @@ cinemagoer @ git+https://github.com/cinemagoer/cinemagoer@c33292d692f139e17df761
 click==8.1.7
 click-default-group==1.2.4
 dacite==1.8.1
+Deprecated==1.2.14
 diskcache==5.6.3
 dunamai==1.19.2
 filelock==3.13.1
@@ -20,18 +22,25 @@ language-data==1.1
 lxml==4.9.3
 marisa-trie==0.7.8
 multidict==6.0.4
+oauthlib==3.2.2
 packaging==23.2
 parse-torrent-name==1.1.1
 pathvalidate==3.2.0
 pyd2v==1.3.0
+python-dateutil==2.9.0.post0
+pytrakt==3.4.31
 PyYAML==6.0.1
 requests==2.31.0
 requests-file==2.0.0
+requests-oauthlib==1.4.0
+six==1.16.0
 SQLAlchemy==2.0.27
 tldextract==3.5.0
 tmdbsimple==2.9.1
+types-python-dateutil==2.9.0.20240316
 typing_extensions==4.10.0
 Unidecode==1.3.8
 urllib3==2.0.3
+wrapt==1.16.0
 xmltodict==0.13.0
 yarl==1.9.2
