fix watched transfer

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ appdirs==1.4.4
 arrow==1.3.0
 async-timeout==4.0.2
 attrs==23.1.0
+cattrs==23.2.3
 certifi==2023.5.7
 charset-normalizer==3.1.0
+chromedriver-py==122.0.6261.128
 cinemagoer @ git+https://github.com/cinemagoer/cinemagoer@c33292d692f139e17df76121d7de54dcd67324bb
 click==8.1.7
 click-default-group==1.2.4
@@ -13,8 +15,11 @@ dacite==1.8.1
 Deprecated==1.2.14
 diskcache==5.6.3
 dunamai==1.19.2
+exceptiongroup==1.2.0
+feedparser==6.0.11
 filelock==3.13.1
 frozenlist==1.3.3
+h11==0.14.0
 idna==3.4
 jsonpickle==2.2.0
 langcodes==3.3.0
@@ -23,24 +28,36 @@ lxml==4.9.3
 marisa-trie==0.7.8
 multidict==6.0.4
 oauthlib==3.2.2
+outcome==1.3.0.post0
 packaging==23.2
 parse-torrent-name==1.1.1
 pathvalidate==3.2.0
+platformdirs==4.2.0
 pyd2v==1.3.0
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python-trakt @ git+https://github.com/z4r/python-trakt@05d7bd54948a13302ef1ad3e6409a12d90290d70
 pytrakt==3.4.31
 PyYAML==6.0.1
 requests==2.31.0
 requests-file==2.0.0
 requests-oauthlib==1.4.0
+selenium==4.18.1
+sgmllib3k==1.0.0
 six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 SQLAlchemy==2.0.27
 tldextract==3.5.0
 tmdbsimple==2.9.1
+trio==0.25.0
+trio-websocket==0.11.1
 types-python-dateutil==2.9.0.20240316
 typing_extensions==4.10.0
 Unidecode==1.3.8
+url-normalize==1.4.3
 urllib3==2.0.3
 wrapt==1.16.0
+wsproto==1.2.0
 xmltodict==0.13.0
 yarl==1.9.2
