--- a/environment.yml
+++ b/environment.yml
@@ -1,18 +1,88 @@
-name: housekeeper
+name: housekeeping
 channels:
   - defaults
 dependencies:
-  - ca-certificates=2024.3.11
+  - ca-certificates=2024.7.2
   - libcxx=14.0.6
   - libffi=3.4.4
   - ncurses=6.4
-  - openssl=1.1.1w
-  - pip=23.3.1
-  - python=3.8.15
+  - openssl=3.0.14
+  - pip=24.0
+  - python=3.9.19
   - readline=8.2
-  - setuptools=68.2.2
-  - sqlite=3.41.2
-  - tk=8.6.12
-  - wheel=0.41.2
+  - setuptools=72.1.0
+  - sqlite=3.45.3
+  - tk=8.6.14
+  - tzdata=2024a
+  - wheel=0.43.0
   - xz=5.4.6
   - zlib=1.2.13
+  - pip:
+      - appnope==0.1.4
+      - asttokens==2.4.1
+      - attrs==24.2.0
+      - backcall==0.2.0
+      - beautifulsoup4==4.12.3
+      - bleach==6.1.0
+      - certifi==2024.7.4
+      - charset-normalizer==3.3.2
+      - cinemagoer==2023.10.22
+      - click==8.1.7
+      - decorator==5.1.1
+      - defusedxml==0.7.1
+      - diskcache==5.6.3
+      - docopt==0.6.2
+      - executing==2.0.1
+      - fastjsonschema==2.20.0
+      - idna==3.7
+      - imdbpy==2022.7.9
+      - importlib-metadata==8.2.0
+      - ipython==8.12.3
+      - jedi==0.19.1
+      - jinja2==3.1.4
+      - jsonschema==4.23.0
+      - jsonschema-specifications==2023.12.1
+      - jupyter-client==8.6.2
+      - jupyter-core==5.7.2
+      - jupyterlab-pygments==0.3.0
+      - lxml==5.2.2
+      - markupsafe==2.1.5
+      - matplotlib-inline==0.1.7
+      - mistune==3.0.2
+      - nbclient==0.10.0
+      - nbconvert==7.16.4
+      - nbformat==5.10.4
+      - packaging==24.1
+      - pandocfilters==1.5.1
+      - parso==0.8.4
+      - pathvalidate==3.2.0
+      - pexpect==4.9.0
+      - pickleshare==0.7.5
+      - pipreqs==0.5.0
+      - platformdirs==4.2.2
+      - prompt-toolkit==3.0.47
+      - ptyprocess==0.7.0
+      - pure-eval==0.2.3
+      - pygments==2.18.0
+      - python-dateutil==2.9.0.post0
+      - python-trakt==1.0
+      - pyyaml==6.0.2
+      - pyzmq==26.1.0
+      - referencing==0.35.1
+      - requests==2.32.3
+      - rpds-py==0.20.0
+      - six==1.16.0
+      - soupsieve==2.5
+      - sqlalchemy==2.0.32
+      - stack-data==0.6.3
+      - tinycss2==1.3.0
+      - tmdbsimple==2.9.1
+      - tornado==6.4.1
+      - traitlets==5.14.3
+      - typing-extensions==4.12.2
+      - urllib3==2.2.2
+      - wcwidth==0.2.13
+      - webencodings==0.5.1
+      - xmltodict==0.13.0
+      - yarg==0.1.9
+      - zipp==3.19.2
