--- a/example.config.yaml
+++ b/example.config.yaml
@@ -14,6 +14,14 @@ trakt:
 plex:
   watched_url: https://rss.plex.tv/id
 
+radarr:
+  api_key: API_KEY
+  url: http://192.168.1.2:7878/
+
+sonarr:
+  api_key: API_KEY
+  url: http://192.168.1.3:8989/
+
 mac:
   watched_movies_media_dir: /path/to/watched
   watched_series_media_dir: /path/to/watched_series
