--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,26 @@
-beautifulsoup4==4.12.3
+arrow==1.3.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+cinemagoer==2023.5.1
 click==8.1.7
 diskcache==5.6.3
-googlesearch_python==1.2.5
+idna==3.10
 IMDbPY==2022.7.9
-parse_torrent_name==1.1.1
+lxml==5.3.0
+packaging==24.1
+parse-torrent-title==2.8.1
 pathvalidate==3.2.0
-python_trakt==1.0
+pipdeptree==2.23.4
+python-dateutil==2.9.0.post0
 PyYAML==6.0.2
-Requests==2.32.3
+requests==2.32.3
+six==1.16.0
+SQLAlchemy==2.0.36
 tmdbsimple==2.9.1
-pytrakt==3.4.31
+trakt.py==4.4.0
+types-python-dateutil==2.9.0.20241003
+typing_extensions==4.12.2
+urllib3==2.2.3
 xmltodict==0.13.0
-youtube_dl==2021.12.17
+yt_dlp~=2024.11.18
+pyarr~=5.2.0
