--- a/requirements_backup.txt
+++ b/requirements_backup.txt
@@ -1,8 +1,8 @@
 alabaster==0.7.16
 arrow==1.3.0
 babel==2.16.0
-Brotli
-certifi
+Brotli @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_27zk0eqdh0/croot/brotli-split_1714483157007/work
+certifi @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_0ecs_ou28u/croot/certifi_1725551740278/work/certifi
 charset-normalizer==3.4.0
 cinemagoer==2023.5.1
 click==8.1.7
@@ -18,17 +18,16 @@ MarkupSafe==3.0.2
 mutagen==1.47.0
 overrides==7.7.0
 packaging==24.1
-pymediainfo==6.1.0
 parse-torrent-title==2.8.1
 pathvalidate==3.2.0
 pipdeptree==2.23.4
 pyarr==5.2.0
 pycryptodomex==3.21.0
 Pygments==2.18.0
-PySocks
+PySocks @ file:///Users/cbousseau/work/recipes/ci_py311/pysocks_1677906386870/work
 python-dateutil==2.9.0.post0
-PyYAML
-requests
+PyYAML @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_faoex52hrr/croot/pyyaml_1728657970485/work
+requests @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_ee45nsd33z/croot/requests_1730999134038/work
 six==1.16.0
 snowballstemmer==2.2.0
 Sphinx==7.3.7
@@ -44,7 +43,7 @@ trakt.py==4.4.0
 types-python-dateutil==2.9.0.20241003
 types-requests==2.32.0.20241016
 typing_extensions==4.12.2
-urllib3
+urllib3 @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_06_m8gdsy6/croot/urllib3_1727769822458/work
 websockets==14.1
 xmltodict==0.13.0
 yt-dlp==2024.11.18
